# Generated by Django 6.0.4 on 2026-04-30 11:47

import django.db.models.deletion
import uuid
from decimal import Decimal
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='SalePayment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('source_system', models.CharField(blank=True, max_length=32)),
                ('source_id', models.CharField(blank=True, max_length=128)),
                ('source_shop_id', models.CharField(blank=True, max_length=128)),
                ('source_path', models.CharField(blank=True, max_length=255)),
                ('migrated_at', models.DateTimeField(blank=True, null=True)),
                ('domain_epoch', models.PositiveIntegerField(default=1)),
                ('payment_method', models.CharField(choices=[('CASH', 'Cash'), ('UPI', 'UPI'), ('BANK', 'Bank'), ('CARD', 'Card'), ('CREDIT', 'Credit'), ('OTHER', 'Other')], max_length=16)),
                ('amount', models.DecimalField(decimal_places=2, default=Decimal('0.00'), max_digits=12)),
                ('reference_code', models.CharField(blank=True, max_length=128)),
                ('note', models.TextField(blank=True)),
                ('occurred_at', models.DateTimeField()),
                ('actor_user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='sale_payments_authored', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-occurred_at', '-created_at'],
            },
        ),
    ]
